[tool.poetry]
name = "doxy"
version = "0.5.0"
description = ""
authors = ["jpk <jpk@goatpr0n.de>"]
readme = "README.md"
repository = "https://github.com/jaypikay/doxy"
include = ["README.md", "config.example.yml"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.0.1"
yamldataclassconfig = "^1.5.0"
semver = "^2.13.0"
requests = "^2.28.2"
click-aliases = "^1.0.1"

[tool.poetry.scripts]
doxy = "doxy.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
